test/compile_errors/err_unreachable_after_return.w
//! expect-error: unreachable code

fn f() -> i32:
    return 42
    1 + 1
